<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginTop="@dimen/max_gap"
        android:ems="10"
        android:hint="@string/write_something"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_original"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginTop="@dimen/max_gap"
        android:text="@string/original_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_edit_text" />

    <TextView
        android:id="@+id/textView_mayusculas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginTop="@dimen/max_gap"
        android:text="@string/mayusculas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_original" />

    <TextView
        android:id="@+id/textView_minusculas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginTop="@dimen/max_gap"
        android:text="@string/minusculas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mayusculas" />

    <TextView
        android:id="@+id/textView_reemplazar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginTop="@dimen/max_gap"
        android:text="@string/reemplazar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_minusculas" />
</androidx.constraintlayout.widget.ConstraintLayout>